fix(docs-infra): in small and medium screens the changes icon of menu does not align
In each and every page whenever screen size goes below 801px hen the icon in fornt of the change icon does not align with the text

--- a/aio/src/styles/2-modules/_toc.scss
+++ b/aio/src/styles/2-modules/_toc.scss
@@ -200,6 +200,8 @@ aio-toc.embedded {
 
     .toc-heading {
       margin: 0 0 8px;
+      display: flex;
+      align-items: center;
     }
   }
 
